--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -8,9 +8,11 @@
 
 a {
   color: $primary;
+  transition: color 0.2s;
   &:hover,
   &:focus,
   &:active {
-    color: darken($primary, 15%);
+    color: darken($primary, 10%);
+    text-decoration: underline;
   }
 }
