--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,9 +1,11 @@
 // Global styling for this template
 
 body {
-  @include body-font;
+  font-family: 'Inter', 'Open Sans', Arial, sans-serif;
+  background: $white;
+  color: $gray-700;
   padding-top: 54px;
-  color: $gray-600;
+  line-height: 1.7;
 }
 @media (min-width: 992px) {
   body {
@@ -18,45 +20,43 @@ h3,
 h4,
 h5,
 h6 {
-  @include heading-font;
+  font-family: 'Inter', 'Saira Extra Condensed', Arial, sans-serif;
   font-weight: 700;
-  text-transform: uppercase;
-  color: $gray-800;
+  text-transform: none;
+  color: $dark;
+  letter-spacing: -0.5px;
 }
 
 h1 {
-  font-size: 6rem;
-  line-height: 5.5rem;
+  font-size: 3rem;
+  line-height: 1.1;
 }
 
 h2 {
-  font-size: 3.5rem;
+  font-size: 2rem;
 }
 
 .subheading {
-  text-transform: uppercase;
+  text-transform: none;
   font-weight: 500;
-  @include heading-font;
-  font-size: 1.35rem;
+  font-size: 1.1rem;
+  color: $gray-500;
 }
 
-.list-social-icons {
-  a {
-    color: $gray-700;
-    &:hover {
-      color: $primary;
-    }
-    .fa-lg {
-      font-size: 1.75rem;
-    }
-  }
+section.resume-section {
+  background: $white;
+  border-radius: 1rem;
+  box-shadow: 0 2px 8px rgba(34,40,49,0.04);
+  margin-bottom: 2rem;
+  padding: 2.5rem 1.5rem;
 }
 
-.list-icons {
-  font-size: 3rem;
-  .list-inline-item i {
-    &:hover {
-      color: $primary;
-    }
-  }
+.list-social-icons a:focus {
+  outline: 2px solid $primary;
+  outline-offset: 2px;
+}
+
+.list-icons .list-inline-item i:hover,
+.list-icons .list-inline-item i:focus {
+  color: $primary;
 }
